...
                    <view key="view" contentMode="scaleToFill" id="ZSk-3F-BGN">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="логин = Somebody" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0gc-HG-Qf0">
                                <rect key="frame" x="59" y="159" width="275" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="login"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="пароль = mypassword" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pVS-IA-T51">
                                <rect key="frame" x="59" y="226" width="275" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="password"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hWh-in-Q6J">
                                <rect key="frame" x="137.66666666666666" y="310" width="117.66666666666666" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Войти">
                                            <attributes>
                                                <font key="NSFont" size="19" name="Helvetica"/>
...
                                    <segue destination="Y2c-mq-SEV" kind="show" id="PYx-aE-CZw"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="dgP-55-XSw"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="loginView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="pVS-IA-T51" firstAttribute="centerX" secondItem="ZSk-3F-BGN" secondAttribute="centerX" id="3UC-VZ-bgN"/>
                            <constraint firstItem="Zag-Wd-5zh" firstAttribute="centerX" secondItem="ZSk-3F-BGN" secondAttribute="centerX" id="86Q-jq-3yX"/>
                            <constraint firstItem="0gc-HG-Qf0" firstAttribute="top" secondItem="dgP-55-XSw" secondAttribute="top" constant="100" id="Rk7-6y-7yV"/>
...
                                    <action selector="logoutTapped:" destination="mEt-T9-aE6" eventType="touchUpInside" id="ABO-EF-IwZ"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="PSQ-6B-Ucq"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="profileView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="fcg-OY-NV7" firstAttribute="top" secondItem="PSQ-6B-Ucq" secondAttribute="top" id="KaN-Q4-UYe"/>
                            <constraint firstItem="son-NV-vSe" firstAttribute="centerX" secondItem="QC5-Fd-XSg" secondAttribute="centerX" id="Orc-Tr-zVO"/>
                            <constraint firstItem="son-NV-vSe" firstAttribute="width" secondItem="PSQ-6B-Ucq" secondAttribute="width" multiplier="0.9" id="XTV-MW-dJv"/>
...
