...
              let password = passwordField.text,
              !name.isEmpty,
              !password.isEmpty
        else {
            self.showOk(
                title: "Ошибка",
                message: "Логин/пароль не заполнены")
            return
        }
        authService.login(userName: name, password: password) { [weak self] response in
            guard let self = self else { return }
            DispatchQueue.main.async {
                switch response.result {
...
